--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pyparsing>=3.0.9",
     "PyYAML>=6.0.1",
     "requests>=2.28.2",
-    "shapely>=2.0.1"
+    "shapely>=2.0.1",
+    "mkdocstrings-python>=1.3.0",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
