--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "requests>=2.28.2",
     "shapely>=2.0.1",
     "mkdocstrings-python>=1.3.0",
+    "pyaml>=21.10.1",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
