--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ dynamic = ["version"]
 description = "Make data extracts from OSM data."
 authors = [
     {name = "Rob Savoye", email = "rob.savoye@hotosm.org"},
+    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
 ]
 dependencies = [
     "deepdiff>=6.3.1",
@@ -18,7 +19,7 @@ dependencies = [
     "mkdocstrings-python>=1.3.0",
     "pyaml>=21.10.1",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 readme = "README.md"
 license = "GPL-3.0-only"
 keywords = ["hot", "osm", "openstreetmap"]
@@ -26,26 +27,17 @@ classifiers = [
     "Topic :: Utilities",
     "Topic :: Scientific/Engineering :: GIS",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 ]
 
 [project.urls]
 homepage = "https://github.com/hotosm/osm-rawdata/wiki"
-documentation = "https://github.com/hotosm/osm-rawdata/wiki"
+documentation = "https://hotosm.github.io/osm-rawdata"
 repository = "https://github.com/hotosm/osm-rawdata"
 
-[tool.pdm]
-version = {from = "osm_rawdata/__version__.py"}
-[tool.pdm.build]
-includes = ["osm_rawdata"]
-source-includes = ["tests", "LICENSE.md", "README.md"]
-[tool.pdm.dev-dependencies]
-test = [
-    "pytest>=7.2.1",
-]
-
 [build-system]
-requires = ["pdm-pep517>=1.0.0"]
+requires = ["pdm-pep517>=1.1.4"]
 build-backend = "pdm.pep517.api"
 
 [tool.pytest.ini_options]
@@ -61,8 +53,52 @@ version = "0.1.0"
 version_files = [
     "pyproject.toml:version",
     "osm_rawdata/__version__.py",
-    "Makefile:VERSION",
 ]
+
+[tool.pdm]
+version = {from = "osm_rawdata/__version__.py"}
+[tool.pdm.build]
+includes = ["osm_rawdata"]
+source-includes = ["tests", "LICENSE.md", "README.md"]
+[tool.pdm.dev-dependencies]
+dev = [
+    "black>=23.7.0",
+    "commitizen>=3.6.0",
+    "pre-commit>=3.3.3",
+]
+test = [
+    "pytest>=7.4.0",
+]
+docs = [
+    "mkdocs>=1.5.2",
+    "mkdocs-material>=9.1.21",
+    "mkdocstrings-python>=1.4.0",
+    "mkdocs-exclude>=1.0.2",
+    "black>=23.7.0",
+]
+
+[tool.black]
+line-length = 132
+target-version = "py310"
+
+[tool.ruff]
+fix = true
+line-length = 132
+target-version = "py310"
+select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
+ignore = ["N805", "B008"]
+exclude = [
+    ".git",
+    ".ruff_cache",
+    ".vscode",
+    "__pypackages__",
+    "build",
+    "dist",
+    "osm_rawdata/__version__.py",
+]
+[tool.ruff.pydocstyle]
+convention = "google"
+
 
 [project.scripts]
 # osm-rawdata = "osm_rawdata.cmd:main"
