--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,65 @@
 site_name: osm-rawdata
-site_url: https://github.com/hotosm/osm-rawdata/wiki
-nav:
-  - Home: Home.md
-  - About: about.md
+site_description: Make data extracts from OSM data.
+# strict: true
+site_url: "https://www.hotosm.org"
+
+repo_name: "hotosm/osm-rawdata"
+repo_url: "https://github.com/hotosm/osm-rawdata/"
+edit_uri: "edit/main/docs/"
+
+extra:
+  social:
+    - icon: "fontawesome/brands/github"
+      link: "https://github.com/hotosm/"
+    - icon: "fontawesome/brands/twitter"
+      link: "https://twitter.com/hotosm"
+    - icon: "fontawesome/solid/globe"
+      link: "https://www.hotosm.org"
+
+theme:
+  name: material
+  palette:
+    primary: custom
+
+extra_css:
+  - css/extra.css
+
+markdown_extensions:
+  - tables
+  - toc:
+      permalink: true
+      title: Page contents
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.highlight
+  - pymdownx.extra
+  - pymdownx.emoji:
+  - pymdownx.tabbed:
+      alternate_style: true
 
 plugins:
   - search
-  - mkdocstrings
+  - exclude:
+      glob:
+        - plugins/*
+        - __pycache__/*
+  - mkdocstrings:
+      handlers:
+        python:
+          paths: [.]
+          options:
+            members_order: source
+            separate_signature: true
+            filters: ["!^_"]
+            docstring_options:
+              ignore_init_summary: true
+            merge_init_into_class: true
+
+nav:
+  - About: about.md
+  - Usage:
+      - JSON: json.md
+      - YAML: yaml.md
+  - API: api.md
+  - License: LICENSE.md
