--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,6 +23,10 @@ jobs:
 
     container:
       image: ghcr.io/hotosm/osm-rawdata:ci
+      volumes:
+        # Mount / test files in commit
+        - ./osm_rawdata:/home/appuser/.local/lib/python3.10/site-packages/osm_rawdata
+        - ./tests:/home/appuser/tests
       options: --user root
 
     steps:
