ci: add --no-default to pdm dep doc deploy

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,5 +40,5 @@ jobs:
 
       - name: Publish
         run: |
-          pdm install -G docs
+          pdm install -G docs --no-default
           pdm run mkdocs gh-deploy --force
