--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,24 +12,23 @@ on:
   # Allow manual trigger (workflow_dispatch)
   workflow_dispatch:
 
-permissions:
-  contents: read
-
 jobs:
   test:
     runs-on: ubuntu-latest
     environment:
       name: ${{ github.ref_name }}
 
-    container:
-      image: ghcr.io/hotosm/osm-rawdata:ci
-      volumes:
-        # Mount / test files in commit
-        - ./osm_rawdata:/home/appuser/.local/lib/python3.10/site-packages/osm_rawdata
-        - ./tests:/home/appuser/tests
-      options: --user root
-
     steps:
       - uses: actions/checkout@v3
-      - name: Run pytest as appuser
-        run: gosu appuser pytest
+
+      - name: Start CI Container
+        run: >
+          docker run -d --name fmtm_pytest
+          -v "$GITHUB_WORKSPACE/osm_rawdata:/home/appuser/.local/lib/python3.10/site-packages/osm_rawdata"
+          -v "$GITHUB_WORKSPACE/tests:/home/appuser/tests"
+          -u root
+          ghcr.io/hotosm/osm-rawdata:ci
+          sleep infinity
+
+      - name: Run PyTest as appuser
+        run: docker exec fmtm_pytest gosu appuser pytest
