ci: only trigger pytest on code/test changes

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,6 +5,10 @@ on:
   push:
     branches:
       - "*"
+    paths:
+      # Workflow is triggered only if code or tests change
+      - "fmtm_splitter"
+      - "tests"
   # Run tests on PR, prior to merge to main & development.
   pull_request:
     branches:
