--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "requests>=2.28.2",
     "shapely>=2.0.1",
     "geojson>=2.5.0",
+    "psycopg2>=2.9.7",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
