--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "shapely>=2.0.1",
     "geojson>=2.5.0",
     "psycopg2>=2.9.7",
+    "flatdict>=4.0.1",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
