ci: omit changelog from markdownlint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,4 +32,4 @@ repos:
     rev: v0.35.0
     hooks:
       - id: markdownlint
-        args: [--fix]
+        args: [--fix, --ignore, CHANGELOG.md]
