--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "shapely>=2.0.1",
     "geojson>=2.5.0",
     "pyarrow>=1.24.2",
-    "sqlalchemy>=2.0.1",
+    "sqlalchemy>=1.4.41",
     "GeoAlchemy2>=0.12.5",
     "sqlmodel>=0.0.8",
     "SQLAlchemy>=1.4.41",
@@ -26,7 +26,7 @@ dependencies = [
 ]
 requires-python = ">=3.10"
 readme = "README.md"
-license = "GPL-3.0-only"
+license = "AGPL-3.0-only"
 keywords = ["hot", "osm", "openstreetmap"]
 classifiers = [
     "Topic :: Utilities",
