--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "sqlalchemy>=1.4.41",
     "GeoAlchemy2>=0.12.5",
     "SQLAlchemy-Utils>=0.41.1",
+    "psycopg2>=2.9.9",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
