--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ version = "0.1.3"
 version_files = [
     "pyproject.toml:version",
     "osm_rawdata/__version__.py",
+    "Makefile:VERSION",
 ]
 
 [tool.pdm]
