--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "GeoAlchemy2>=0.12.5",
     "SQLAlchemy-Utils>=0.41.1",
     "psycopg2>=2.9.9",
+    "flatdict>=4.0.1",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
