ci: add dependency label to auto-labeller

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,10 +1,11 @@
 "devops":
   - ".github/**/*"
   - "Dockerfile"
-  - "pyproject.toml"
-  - "pdm.lock"
   - "*entrypoint.sh"
   - "Makefile"
+"dependency":
+  - "pyproject.toml"
+  - "pdm.lock"
 "documentation":
   - "docs/**/*"
   - "mkdocs.yml"
