--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ plugins:
             merge_init_into_class: true
 
 nav:
+  - Home: index.md
   - About: about.md
   - Utilities:
       - Importer: importer.md
