--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -3,8 +3,7 @@ name: Build CI Img
 on:
   # Push includes PR merge
   push:
-    branches:
-      - main
+    branches: [main]
     paths:
       # Workflow is triggered only if deps change
       - "pyproject.toml"
