--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ version_files = [
 version = {from = "osm_rawdata/__version__.py"}
 [tool.pdm.build]
 includes = ["osm_rawdata"]
-source-includes = ["tests", "LICENSE.md", "README.md"]
+source-includes = ["tests", "LICENSE", "README.md"]
 [tool.pdm.dev-dependencies]
 dev = [
     "black>=23.7.0",
