ci: update all workflows to use tagged versions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,6 @@ on:
 
 jobs:
   publish_to_pypi:
-    uses: hotosm/gh-workflows/.github/workflows/pypi_publish.yml@main
+    uses: hotosm/gh-workflows/.github/workflows/pypi_publish.yml@1.0.0
     secrets:
       PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
