--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   backend-ci-build:
-    uses: hotosm/gh-workflows/.github/workflows/image_build.yml@main
+    uses: hotosm/gh-workflows/.github/workflows/image_build.yml@1.0.0
     with:
       build_target: ci
       image_tags: |
