--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   ci-build:
-    uses: hotosm/gh-workflows/.github/workflows/image_build.yml@main
+    uses: hotosm/gh-workflows/.github/workflows/image_build.yml@1.0.0
     with:
       build_target: prod
       image_name: "ghcr.io/${{ github.repository }}"
