--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,12 +12,12 @@ on:
 
 jobs:
   build_doxygen:
-    uses: hotosm/gh-workflows/.github/workflows/doxygen_build.yml@main
+    uses: hotosm/gh-workflows/.github/workflows/doxygen_build.yml@1.0.0
     with:
       output_path: docs/apidocs
 
   publish_docs:
-    uses: hotosm/gh-workflows/.github/workflows/mkdocs_build.yml@main
+    uses: hotosm/gh-workflows/.github/workflows/mkdocs_build.yml@1.0.0
     needs: [build_doxygen]
     with:
       image: ghcr.io/${{ github.repository }}:ci
