--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   pytest:
-    uses: hotosm/gh-workflows/.github/workflows/test_pytest.yml@main
+    uses: hotosm/gh-workflows/.github/workflows/test_pytest.yml@1.0.0
     with:
       image_name: ghcr.io/${{ github.repository }}
       tag_override: ${{ github.event_name == 'push' && 'ci' || '' }}
