--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  backend-ci-build:
+  ci-build:
     uses: hotosm/gh-workflows/.github/workflows/image_build.yml@1.0.1
     with:
       build_target: ci
