--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -12,4 +12,4 @@ jobs:
   publish-docs-to-wiki:
     uses: hotosm/gh-workflows/.github/workflows/wiki.yml@1.0.1
     with:
-      homepage_path: "index.md"
+      homepage_path: "wiki_redirect.md"
