ci: always update changelog on cz bump

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ version_files = [
     "osm_rawdata/__version__.py",
     "Makefile:VERSION",
 ]
+update_changelog_on_bump = true
 
 [tool.pdm]
 version = {from = "osm_rawdata/__version__.py"}
