ci: fix build_ci image workflow

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -17,4 +17,4 @@ jobs:
     with:
       build_target: ci
       image_tags: |
-        "ghcr.io/hotosm/osm-rawdata:ci"
+        "ghcr.io/${{ github.repository }}:ci"
