--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ update_changelog_on_bump = true
 version = {from = "osm_rawdata/__version__.py"}
 [tool.pdm.build]
 includes = ["osm_rawdata"]
-source-includes = ["tests", "LICENSE", "README.md"]
+source-includes = ["LICENSE.md", "README.md"]
 [tool.pdm.dev-dependencies]
 dev = [
     "black>=23.7.0",
